# GamED-AI

./: .cursorrules  .gitignore  CLAUDE.md  COMMANDS.md  LICENSE  PRESENTATION_SLIDE_SCRIPT.md  PRESENTATION_SLIDE_SCRIPT_v2_RETENTION_FOCUSED.md  README.md  REPOSITORY_COMPLETE_DOCUMENTATION.md  acl_cemo-gamedai.tex  docker-compose.yml  gamedai.bib
asset_pipeline/: README.md  __init__.py  pyproject.toml
asset_pipeline/cli/: main.py
asset_pipeline/generators/: __init__.py  gemini_image.py  imagen.py  sprite_packer.py  vectorizer.py
asset_pipeline/pipeline/: __init__.py  graph.py  nodes.py  state.py
asset_pipeline/prompts/: __init__.py  png_template.py  sprite_template.py  svg_template.py
asset_pipeline/storage/: __init__.py  artifact_store.py  checkpoint_store.py
asset_pipeline/tests/: test_packer.py  test_schemas.py  test_validators.py
asset_pipeline/tests/fixtures/: png_example.json  sprite_example.json  svg_example.json
asset_pipeline/validators/: __init__.py  png_validator.py  sprite_validator.py  svg_validator.py
backend/: .env.example  START_TEST.sh  config.yaml  requirements.txt  test_hierarchical_scene.py
docs/: AGENT_DEVELOPMENT_GUIDE.md  ALGORITHMIC_GAMES_IMPLEMENTATION_GUIDE.md  ARCHITECTURE.md  BACKEND_AUDIT_ASSETS.md  BACKEND_AUDIT_CORE.md  BENCHMARK_BASELINE_1_INFRASTRUCTURE_AWARE.md  BENCHMARK_BASELINE_2_FROM_SCRATCH.md  BENCHMARK_CLAUDE_CODE_CONSTRAINTS_AND_LIMITATIONS.md  CHECKPOINTING_COMPLETE_SUMMARY.md  CHECKPOINTING_IMPLEMENTATION_SUMMARY.md  CHECKPOINTING_INTEGRATION_TEST_RESULTS.md  CHECKPOINTING_SETUP.md  COMMANDS_REFERENCE.md  (+36 more)
(+1043 files in other folders)
